招生简章删除默认字。医师-学堂列表页增加物理返回键。

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -197,7 +197,7 @@
 			</div>
 			<div class="general_center" onclick="location.href ='recruit.html?merId={{id}}'"><span>更多详细内容请查看招生简章全文</span> <img src="/xcview/images/intro_rigth.png" alt="" /></div>
 			<div class="both"></div>
-			<a href="{{entryFormAttachment}}" class="download"  download="招生简章">下载招生简章</a>
+			<a href="{{entryFormAttachment}}" class="download">下载招生简章</a>
 		</div>
 		<div class="show_height"></div>
 		<dev class="bottom_fiexd">
