--- a/wechat/src/main/webapp/xcview/html/physician/physician_list.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physician_list.html
@@ -509,5 +509,25 @@ $(".find_nav_list").on('touchmove', function (e) {
 			});
 		};
 	</script>
+<script> 
+// 控制手机物理键--返回
+window.onload = function(){
+  if(window.history && window.history.pushState) {  
+      $(window).on('popstate', function() {  
+          var hashLocation = location.hash;  
+          var hashSplit = hashLocation.split("#!/");  
+          var hashName = hashSplit[1];  
+          if(hashName !== '') {  
+              var hash = window.location.hash;  
+              if(hash === '') {  
+                  // alert("你点击了返回键");  
+                  location.href ='/xcview/html/physician/search.html'  /*跳转链接*/
+              }  
+          }  
+      });  
+      window.history.pushState('forward', null, '/xcview/html/physician/physician_list.html');    //引号里写当前页面地址,刷新当前页'
+  }
+};
+</script> 
 	
 </html>
