--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -853,23 +853,23 @@
 								</tr>
 								<tr>
 									<td>上午</td>
-									<td><p><img src="/web/images/right_15.png"/></p></td>
-									<td><p></p></td>
-									<td><p></p></td>
-									<td><p></p></td>
-									<td><p></p></td>
-									<td><p></p></td>
-									<td><p></p></td>
+									<td><p data-type = "1.1"></p></td>
+									<td><p data-type = "2.1"></p></td>
+									<td><p data-type = "3.1"></p></td>
+									<td><p data-type = "4.1"></p></td>
+									<td><p data-type = "5.1"></p></td>
+									<td><p data-type = "6.1"></p></td>
+									<td><p data-type = "7.1"></p></td>
 								</tr>
 								<tr>
 									<td>下午</td>
-									<td><p></p></td>
-									<td><p></p></td>
-									<td><p></p></td>
-									<td><p></p></td>
-									<td><p></p></td>
-									<td><p></p></td>
-									<td><p></p></td>
+									<td><p data-type = "1.2"></p></td>
+									<td><p data-type = "2.2"></p></td>
+									<td><p data-type = "3.2"></p></td>
+									<td><p data-type = "4.2"></p></td>
+									<td><p data-type = "5.2"></p></td>
+									<td><p data-type = "6.2"></p></td>
+									<td><p data-type = "7.2"></p></td>
 								</tr>
 							</table>
 						</div>
