学堂直播间--底部修改

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -250,6 +250,13 @@ $(function(){
 .img_doc{
 	transform: scale(1, 1) translate(0px, 0px) !important;
 }
+
+.anchor_center p span {
+    font-size: 0.3rem !important;
+}
+.coze_bottom input{
+	line-height: 1.6rem;
+}
 </style>
 </head>
 <body style="background: #f8f8f8;overflow: hidden1;">
@@ -386,7 +393,7 @@ $(function(){
 		</div>
 		<div class="both"></div>
 	</div>
-	<div class="footer_k footer_ks"></div>
+	<div class="footer_k footer_ks" id="footer_ks" style="height: 5.2rem;"></div>
 	<!-- 详情聊天开始 -->
 	
 	<div class="coze" style="height1: 14rem">
