修改动态课程类型问题

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -333,6 +333,9 @@
 						{{if item.courseType==3}}
 						<div class="course_nav_cen_size">{{item.startTime}}</div>
 						{{/if}}
+						{{if item.courseType==4}}
+						<div class="course_nav_cen_size">{{item.courseAddress}}</div>
+						{{/if}}
 
 						<!-- <div class="course_nav_rate">免费</div> -->
 					</div>
