全部动态--介绍添加隐藏事件

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -799,9 +799,9 @@
 					</ul>
 				</div>		
 			</div>
-			<div class="message_referral_center">坐诊医馆：{{items.name}}</div>
-			<div class="message_referral_center">预约电话：<a href="tel:{{items.tel}}">{{items.tel}}</a></div>
-			<div class="message_referral_center">医馆地址：{{items.detailedAddress}}</div>
+			<div class="message_referral_center clinic">坐诊医馆：{{items.name}}</div>
+			<div class="message_referral_center tel">预约电话：<a href="tel:{{items.tel}}">{{items.tel}}</a></div>
+			<div class="message_referral_center house_address">医馆地址：{{items.detailedAddress}}</div>
 			<div class="both"></div>
 
 			<table border="1" align="center" bgcolor="" border="0" cellpadding="0" cellspacing="0">
