--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -853,25 +853,26 @@
 								</tr>
 								<tr>
 									<td>上午</td>
-									<td><p data-type = "1.1"></p></td>
-									<td><p data-type = "2.1"></p></td>
-									<td><p data-type = "3.1"></p></td>
-									<td><p data-type = "4.1"></p></td>
-									<td><p data-type = "5.1"></p></td>
-									<td><p data-type = "6.1"></p></td>
-									<td><p data-type = "7.1"></p></td>
+									<td><p><img class="hide" data-type = "1.1" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "2.1" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "3.1" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "4.1" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "5.1" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "6.1" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "7.1" src="/web/images/right_15.png"/></p></td>
 								</tr>
 								<tr>
 									<td>下午</td>
-									<td><p data-type = "1.2"></p></td>
-									<td><p data-type = "2.2"></p></td>
-									<td><p data-type = "3.2"></p></td>
-									<td><p data-type = "4.2"></p></td>
-									<td><p data-type = "5.2"></p></td>
-									<td><p data-type = "6.2"></p></td>
-									<td><p data-type = "7.2"></p></td>
+									<td><p><img class="hide" data-type = "1.2" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "2.2" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "3.2" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "4.2" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "5.2" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "6.2" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "7.2" src="/web/images/right_15.png"/></p></td>
 								</tr>
 							</table>
+							<p class="hospital_worktime_warn warning hide">请选择坐诊时间</p>
 						</div>
 
 
