[bug fix]fix 交易记录前端写死订单号bug

--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -926,7 +926,7 @@
 
 														{{each items as item i}}
 													<tr>
-														<td>180320181450MHJCx394</td>
+														<td>{{item.orderId}}</td>
 														<td>{{item.money}}</td>
 														
 														{{if item.type==1}}
