--- a/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
+++ b/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
@@ -19,13 +19,27 @@
 		<link rel="stylesheet" type="text/css" href="/web/css/liveVideo.css?v=ipandatcm_1.3&version=90f96cb97d" />
 		
 		<script src="http://cnstatic01.e.vhall.com/3rdlibs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
+		<style type="text/css">
+			.show-bg{
+				width: 13px;
+				height: 13px;
+				/*background: url(/web/images/btn-ondown.png) no-repeat;*/
+				position: absolute;
+			    top: 6px;
+			    left: 0;
+			    pointer-events:none; 
+			}
+		</style>
 	</head>
 	<body style="background: #000!important">
 
 		<!--   直播区域    -->
 		<div class="livePlayer" style="position: relative;padding-right: 310px;">
-			 <div style="position: absolute;bottom: 0;left: 200px;"><label style="color: #fff;font-weight: 400;">
-			 <input id="auto_play" type="checkbox" /> 自动打开下一课时</label></div>  
+			 <div style="position: absolute;bottom: 0;left: 200px;">
+			 	<label style="color: #fff;font-weight: 400;">
+			 	<input id="auto_play" type="checkbox" /> 自动打开下一课时11111</label>
+			 	<div class="show-bg"></div>
+			 </div>  
 
 			<!--弹幕得div-->
 			<div id='boxDom' style="background-color: transparent;position: absolute; height: 100%;z-index:9"></div>
