--- a/wechat/src/main/webapp/xcview/html/physician/article.html
+++ b/wechat/src/main/webapp/xcview/html/physician/article.html
@@ -241,6 +241,12 @@
         $(".weixin_ceng").click(function(){
         	$(".weixin_ceng").hide();
         });
+
+        // 点击回复背景色隐藏
+        $(".bg_userModal").click(function(){
+        	$(".bg_userModal").hide();
+        	$(".wrapLittle_comment").hide();
+        });
 	};
 </script>
 <!-- 公用弹框 -->
