--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -81,7 +81,7 @@
 								<div class="name">{{item.name}}</div>
 								<div class="duty">{{item.title}}</div>
 							</div>
-							<div class="hospital">{{item.hospitalAddress}}</div>
+							<div class="hospital">{{item.hospitalName}}</div>
 							<div class="both"></div>
 						</div>
 					</div>
