修改图片路径

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -631,7 +631,7 @@
 				<!--分页部分end-->
 				<!--没有数据时的展示-->
 							<div class="comment-nodata banner-dongtai hide" style="background: white; padding: 135px 0;">
-								<img src="../images/notext_icon.png" alt="无数据">
+								<img src="/web/images/notext_icon.png" alt="无数据">
 								<p>暂无数据</p>
 							</div>
 				</div>
@@ -677,7 +677,7 @@
 							</script>
 							<!--没有数据时的展示-->
 							<div class="comment-nodata banner-nulldata hide">
-								<img src="../images/notext_icon.png" alt="无数据">
+								<img src="/web/images/notext_icon.png" alt="无数据">
 								<p>暂无数据</p>
 							</div>
 						</div>
@@ -1041,7 +1041,7 @@
 						</table>
 						<!--没有数据时的展示-->
 							<div class="comment-nodata columnNodata hide">
-								<img src="../images/notext_icon.png" alt="无数据">
+								<img src="/web/images/notext_icon.png" alt="无数据">
 								<p>暂无专栏</p>
 							</div>
 						<!--分页部分start-->
@@ -1177,7 +1177,7 @@
 						</table>
 						<!--没有数据时的展示-->
 							<div class="comment-nodata workNodata hide">
-								<img src="../images/notext_icon.png" alt="无数据">
+								<img src="/web/images/notext_icon.png" alt="无数据">
 								<p>暂无著作</p>
 							</div>
 						<!--分页部分start-->
@@ -1304,7 +1304,7 @@
 						</table>
 						<!--没有数据时的展示-->
 							<div class="comment-nodata mediaNodata hide">
-								<img src="../images/notext_icon.png" alt="无数据">
+								<img src="/web/images/notext_icon.png" alt="无数据">
 								<p>暂无报道</p>
 							</div>
 						<!--分页部分start-->
