文章医案引入分享文件。修改医案和文章id

--- a/wechat/src/main/webapp/xcview/html/physician/article.html
+++ b/wechat/src/main/webapp/xcview/html/physician/article.html
@@ -31,7 +31,7 @@
 			<div class="headers">
 				<p>文章</p>
 			</div>
-			<div class="arror_return">
+			<div class="arror_return" onclick="javascript:window.history.back();return false;">
 				<img src="/xcview/images/back icon.png" />
 			</div>
 			<div class="header_news">
@@ -202,6 +202,9 @@
 <script type="text/javascript" src="/xcview/js/physician/index.js"></script> 
 
 <script type="text/javascript" src="/xcview/js/physician/article.js"></script> 
+
+<script type="text/javascript" src="/xcview/js/share/share.js?v=wechat_1.1.1"></script>
+<script>  /*分享引入*/
 
 
 <script>
