--- a/wechat/src/main/webapp/xcview/html/physician/consilia.html
+++ b/wechat/src/main/webapp/xcview/html/physician/consilia.html
@@ -53,7 +53,7 @@
 			<div class="headers">
 				<p>医案</p>
 			</div>
-			<div class="arror_return">
+			<div class="arror_return" onclick="javascript:window.history.back();return false;">
 				<img src="/xcview/images/back icon.png" />
 			</div>
 			<div class="header_news">
